Properties and local settings update